included div elements and h1

--- a/index.html
+++ b/index.html
@@ -13,6 +13,20 @@
 <body>
     <header>
         <div id="Highscores"
+          <a href="/scores.html">High Scores</a>
+         </div>
+          <div id="Timer"></div>
+    </header>
+    <main> 
+        <div id="Welcome">
+            <h1>Welcome to the Code Quiz</h1>
+            <button id="StartQuiz" class="btn">Start Quiz</button>
+         </div>
+         <div id="Quiz" class="hidden">
+         <div id="question"
+         
+         </div>
+          </main>
 
 
 
