--- a/index.html
+++ b/index.html
@@ -22,18 +22,26 @@
             <h1>Welcome to the Code Quiz</h1>
             <button id="StartQuiz" class="btn">Start Quiz</button>
          </div>
-         <div id="Quiz" class="hidden">
+     <div id="Quiz" class="hidden">
          <div id="question"
-         
+
          </div>
-          </main>
+         <div id="Message">
 
 
+         </div>
+    </div>
+         <div id="result" class="hidden">
+         <div id="summary"></div>
+         <button id="ViewScores" class="btn">View All High Scores</button>
+         <input type="text" id="initials" placeholder="Enter your initials"/>
+         <button id="SaveScore" class="btn">Safe Score</button>
+         <button id="PlayAgain" class="btn">Play Again</button>
+    </div>
+</main>
 
 
-
-
-    </header>
+</header>
 
 </body>
 </html>
