added var elements to js

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
     </div>
 </main>
 
-
-</header>
-
 </body>
+<script src="/assets/js/questions.js"><</script>
+<script src="/assets/js/quiz.js"></script>
+
 </html>
