corrected errors on html

--- a/index.html
+++ b/index.html
@@ -1,47 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-
+    
 <head>
-   <meta charset="UFT-B">
-   <meta http-equiv="X-UA-Vompartible" content="IE-edge">
-   <meta name="viewport" content="width=device=width, intial-scale=1.0">
-   <title>Code Quiz</title>
-   <link rel="stylesheet" href=
-   <link rel="stylesheet" href="/assets/css/style.css">
+    <meta charset="UFT-B">
+    <meta http-equiv="X-UA-Vompartible" content="IE-edge">
+    <meta name="viewport" content="width=device=width, intial-scale=1.0">
+    <title>Code Quiz</title>
+    <link rel="stylesheet" href="/assets/css/style.css">
 </head>
 
 <body>
     <header>
-        <div id="Highscores"
-          <a href="/scores.html">High Scores</a>
-         </div>
-          <div id="Timer"></div>
+        <div id="Highscores">
+            <a href="/scores.html">High Scores</a>
+        </div>
+        <div id="Timer"></div>
     </header>
-    <main> 
+    <main>
         <div id="Welcome">
             <h1>Welcome to the Code Quiz</h1>
             <button id="StartQuiz" class="btn">Start Quiz</button>
-         </div>
-     <div id="Quiz" class="hidden">
-         <div id="question"
+        </div>
+        <div id="Quiz" class="hidden">
+            <div id="question"></div>
+            <div id="Message">
 
-         </div>
-         <div id="Message">
-
-
-         </div>
-    </div>
-         <div id="result" class="hidden">
-         <div id="summary"></div>
-         <button id="ViewScores" class="btn">View All High Scores</button>
-         <input type="text" id="initials" placeholder="Enter your initials"/>
-         <button id="SaveScore" class="btn">Safe Score</button>
-         <button id="PlayAgain" class="btn">Play Again</button>
-    </div>
-</main>
+            </div>
+        </div>
+        <div id="result" class="hidden">
+            <div id="summary"></div>
+            <button id="ViewScores" class="btn">View All High Scores</button>
+            <input type="text" id="initials" placeholder="Enter your initials" />
+            <button id="SaveScore" class="btn">Safe Score</button>
+            <button id="PlayAgain" class="btn">Play Again</button>
+        </div>
+    </main>
 
 </body>
-<script src="/assets/js/questions.js"><</script>
+<script src="/assets/js/questions.js"></script>
 <script src="/assets/js/quiz.js"></script>
 
 </html>
