--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Vompartible" content="IE-edge">
     <meta name="viewport" content="width=device=width, intial-scale=1.0">
     <title>Code Quiz</title>
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
