--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </body>
 
 <!--ScriptToQuestions and Quiz Link-->
-<script src="/assets/js/questions.js"></script>
-<script src="/assets/js/quiz.js"></script>
+<script src="js/questions.js"></script>
+<script src="js/quiz.js"></script>
 
 </html>
